...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfj-m7-W5X">
                                <rect key="frame" x="17" y="198" width="343" height="34"/>
                                <color key="backgroundColor" red="0.1960784314" green="0.60392156860000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="confirmforgotpasswordupdatepasswordbutton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Update Password">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="updatePassword:" destination="1Z9-ek-DYA" eventType="touchUpInside" id="miO-j4-aW3"/>
                                </connections>
                            </button>
...
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Jd-bP-f38">
                                        <rect key="frame" x="0.0" y="380" width="350" height="25"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="bMB-Up-aR0"/>
                                        </constraints>
                                        <state key="normal" title="Back"/>
                                        <connections>
                                            <action selector="backButtonActionWithSender:" destination="4eg-5R-hBB" eventType="touchUpInside" id="rQr-ty-qgA"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
